# gitignore-haskell

./: LICENSE  README.md  gitignore.cabal
app/: Main.hs
src/: gitignore.hs  ignoreFiles.hs  present.hs  quicksort.hs
