name:                gitignore
version:             0.1.0.0
synopsis:            Haskell implementation of Gitignore tool by Mengu Kagan
description:         Please see README.md
homepage:            https://github.com/GintMist/gitignore-haskell/
license:             BSD3
license-file:        LICENSE
author:              Gint Mist
maintainer:          themistghillein@gmail.com
copyright:           2017 Gint Mist
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Gitignore
                     , Present
                     , Quicksort
                     , IgnoreFiles
  build-depends:       base >= 4.7 && < 5
                     , wreq >= 0.4
                     , bytestring >= 0.10
                     , lens >= 4
                     , directory >= 1
                     , filepath >= 1.4
  default-language:    Haskell2010

executable gitignore-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gitignore
                     , directory
  default-language:    Haskell2010

test-suite gitignore-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , gitignore
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/gitignore
